--- a/src/view/domino/propertyEditors/DominoSectionPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoSectionPropertyEditor.mxml
@@ -8,9 +8,7 @@
                                   >
                                   	<fx:Script>
 		<![CDATA[
-			import mx.collections.ArrayList;
 			import mx.controls.listClasses.ListBaseContentHolder;
-			import mx.controls.Alert;
 
 			private var pre_label_var:String="normal";
 
@@ -37,21 +35,24 @@
 				var exclusions_exclude_option:Array=["normal","superscript","subscript","shadow","emboss","extrude"];
 				var selected_array:Array=[];
 				var hasExlude:Boolean=false;
-				var hasExludeNum:Number=0;
+				var hasExludeNum:Number = 0;
+				var i:int = 0;
+				var checkItem:Object = null;
+
 				if(item){
-					for (var i:int = 0; i < item.numChildren; i++){
-						var checkitem:Object = item.getChildAt(i);
-							if(checkitem){
-								//Alert.show("checkitem:"+checkitem.toString());
-								if(checkitem.hasOwnProperty("selected")&&checkitem.selected==true  ){
-									selected_array.push(checkitem.label);
-								}
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
+						if(checkItem){
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkItem.hasOwnProperty("selected") && checkItem.selected==true  ){
+								selected_array.push(checkItem.label);
 							}
+						}
 					}
 
 					//Alert.show("selected_array:"+selected_array.toString());
 					if(selected_array&& selected_array.length>0){
-						for (var i:int = 0; i < selected_array.length; i++){
+						for (i = 0; i < selected_array.length; i++){
 							if(selected_array[i].toString()=="normal"){
 								hasExlude=true;
 							}else if(exclusions_exclude_option.indexOf(selected_array[i].toString())>=0){
@@ -64,16 +65,15 @@
 					}
 					//Alert.show("hasExlude:"+hasExlude);
 					if(pre_label_var!=null){
-						for (var i:int = 0; i < item.numChildren; i++){
-							var checkitem:Object = item.getChildAt(i);
-							if(checkitem){
+						for (i = 0; i < item.numChildren; i++){
+							checkItem = item.getChildAt(i);
+							if(checkItem){
 							//Alert.show("checkitem:"+checkitem.toString());
-							if(checkitem.hasOwnProperty("selected") ){
+							if(checkItem.hasOwnProperty("selected") ){
 								//	Alert.show("checkitem.label:"+checkitem.label);
-									if(checkitem.label==pre_label_var&& hasExlude==true){
+									if(checkItem.label==pre_label_var&& hasExlude==true){
 										//checkitem.enabled=false;
-										checkitem.selected=false;
-										
+										checkItem.selected=false;
 									}		
 									
 								}
@@ -85,17 +85,13 @@
 
 					}
 
-					
 
-					
-					
-					for (var i:int = 0; i < item.numChildren; i++){
-							var checkitem:Object = item.getChildAt(i);
-							if(checkitem){
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
+						if(checkItem){
 							//Alert.show("checkitem:"+checkitem.toString());
-							if(checkitem.hasOwnProperty("selected") && checkitem.selected==true){
-								
-									if(checkitem.label=="normal"){
+						if(checkItem.hasOwnProperty("selected") && checkItem.selected==true) {
+							if(checkItem.label=="normal"){
 										//Alert.show("checkitem.label:"+checkitem.label);
 										execute_array=exclusions_normal;
 										normalSelect=true;
@@ -110,40 +106,40 @@
 					}
 						//Alert.show("execute_array1:");
 
-					for (var i:int = 0; i < item.numChildren; i++){
-							var checkitem:Object = item.getChildAt(i);
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
 							//Alert.show("checkitem:"+checkitem.toString());
-							if(checkitem.hasOwnProperty("selected") && checkitem.selected==true){
+						if(checkItem.hasOwnProperty("selected") && checkItem.selected==true){
 								//Alert.show("checkitem:"+checkitem.label);
-								if(checkitem.label=="superscript"){
-									if(normalSelect==false)
-									pre_label_var="superscript"
-									if(execute_array==null)
-									execute_array=["subscript","shadow","emboss","extrude"];
-										//break;
-								}
-								if(checkitem.label=="subscript"){
-									if(normalSelect==false)
-									pre_label_var="subscript"
-									if(execute_array==null)
-									execute_array=["superscript","shadow","emboss","extrude"];
+							if(checkItem.label=="superscript"){
+								if(normalSelect==false)
+								pre_label_var="superscript"
+								if(execute_array==null)
+								execute_array=["subscript","shadow","emboss","extrude"];
 									//break;
-								}
-								if(checkitem.label=="shadow"){
-									if(normalSelect==false)
-									pre_label_var="shadow"
-									if(execute_array==null)
-									execute_array=["superscript","subscript","emboss","extrude"];
-									//break;
-								}
-								if(checkitem.label=="emboss"){
-									if(normalSelect==false)
-									pre_label_var="emboss"
-									if(execute_array==null)
-									execute_array=["superscript","subscript","shadow","extrude"];
-									//break;
-								}
-								if(checkitem.label=="extrude"){
+							}
+							if(checkItem.label=="subscript"){
+								if(normalSelect==false)
+								pre_label_var="subscript"
+								if(execute_array==null)
+								execute_array=["superscript","shadow","emboss","extrude"];
+								//break;
+							}
+							if(checkItem.label=="shadow"){
+								if(normalSelect==false)
+								pre_label_var="shadow"
+								if(execute_array==null)
+								execute_array=["superscript","subscript","emboss","extrude"];
+								//break;
+							}
+							if(checkItem.label=="emboss"){
+								if(normalSelect==false)
+								pre_label_var="emboss"
+								if(execute_array==null)
+								execute_array=["superscript","subscript","shadow","extrude"];
+								//break;
+							}
+							if(checkItem.label=="extrude"){
 									if(normalSelect==false)
 									pre_label_var="extrude"
 									if(execute_array==null)
@@ -153,10 +149,7 @@
 							}
 					}		
 					
-						//Alert.show("execute_array2:");
-
-					
-				
+					//Alert.show("execute_array2:");
 
 					for (var j:int = 0; j < item.numChildren; j++){
 						var checkitem_child:Object = item.getChildAt(j);
