Fix the update width of column(Moonshine-IDE/Moonshine-IDE#812)

--- a/src/view/domino/forms/GridForm.mxml
+++ b/src/view/domino/forms/GridForm.mxml
@@ -315,6 +315,22 @@
 				return ""
 			}	
 		}
+
+		[Bindable("propertyEditorChanged")]
+		private function columnWidthInput_keyDownHandler(event:KeyboardEvent):void
+        {
+            if (event.keyCode === Keyboard.ENTER || event.keyCode == Keyboard.TAB)
+            {
+                commitWidth();
+            }
+        }
+
+
+		private function commitWidth():void
+        {
+			if (!selectedItem) return;
+			this.selectedItem["columnProperties"] = this.columnWidth.text;
+        }
 		]]>
 	</fx:Script>
     <suportclasses:layout>
@@ -368,15 +384,13 @@
 					  enabled="{columnList.selectedIndex !== -1 &amp;&amp; columnsDataProvider.length > 1}"
 					  click="deleteColumnButton_clickHandler(event)"/>
 		</s:HGroup>
-
-		<s:FormItem label="Columns Width" skinClass="skins.StackedFormItemSkin">
+	</s:FormItem>
+	<s:FormItem label="Columns Width" skinClass="skins.StackedFormItemSkin">
 			<s:TextInput id="columnWidth" width="100%"
 						 text="{selectedComponentColunmnWidth}" skinClass="skins.TextInputSkin"
 					     height="25"
+						 keyDown="columnWidthInput_keyDownHandler(event)"
 						 enabled="true"
 						 />
-		</s:FormItem>
-
-		
 	</s:FormItem>
 </suportclasses:BasePropertyEditorForm>
