Fix the datetime filed issue (Moonshine-IDE/Moonshine-IDE#812)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -53,6 +53,7 @@
 			import view.domino.surfaceComponents.components.DominoParagraph;
 			import view.domino.surfaceComponents.components.DominoSection;
 			import view.domino.surfaceComponents.components.DominoTabView;
+			import view.domino.surfaceComponents.components.DominoCalendar;
 			public var visualEditorType:String;
 			
 			[Bindable] private var collection:ArrayCollection;
@@ -72,8 +73,9 @@
 						new ComponentListItem("Div", Div),
 						new ComponentListItem("ComputedText", DominoComputedText),
 						new ComponentListItem("Paragraph", DominoParagraph),
-						new ComponentListItem("Section", DominoSection),
-						new ComponentListItem("TabView", DominoTabView)
+						new ComponentListItem("Section1", DominoSection),
+						new ComponentListItem("TabView1", DominoTabView),
+						new ComponentListItem("Calendar", DominoCalendar)
 						
 						
 						
