Add Royale mainApplication convert(Moonshine-IDE/Moonshine-IDE#675)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -209,6 +209,11 @@
 				_isRoyaleProject = true ;
 				return EditingSurfaceWriter.toRoyaleCode(surface,projectName);
 			}
+
+			public function toRoyaleConvertCode():XML
+			{
+				return null;
+			}
 			
 		}
 
